[package]
name = "sqlpest"
version = "0.1.0"
authors = ["gwenn"]
description = "SQL parser (as understood by SQLite)"
repository = "https://github.com/gwenn/sqlpest"
readme = "README.md"
keywords = ["sql", "parser", "sqlite"]
license = "Apache-2.0/MIT"

[dependencies]
pest = { git = "https://github.com/dragostis/pest", branch = "v0.4.0" }
