[package]
name = "sqlpest"
version = "0.1.0"
authors = ["gwenn"]
description = "SQL parser (as understood by SQLite)"
repository = "https://github.com/gwenn/sqlpest"
readme = "README.md"
keywords = ["sql", "parser", "sqlite"]
license = "Apache-2.0/MIT"

[dependencies]
pest = "1.0"
pest_derive = "1.0"